--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -30,7 +30,7 @@
             <div class="card-body">
               <div id="login-form" ng-controller="loginController">
             	<div class="form-group">
-                	<input type="text" class="form-control" placeholder="Legajo" required="required" ng-model="dni">
+                	<input type="text" class="form-control" placeholder="Legajo" required="required" ng-model="legajo">
             	</div>
             	<div class="form-group">
                 	<input type="password" class="form-control" placeholder="Contraseña" required="required" ng-model="claveUsuario">
