--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,11 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-    <script src="ui/modules/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="ui/modules/angular-sweetalert/SweetAlert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
 
-    <script src="app.js"></script>
+    <script src="ui/app.js"></script>
 
     
     <style>
@@ -115,10 +113,11 @@
  
 </head>
 
-<body ng-app='iw3' style="font-family:sans-serif;" ng-controller='home'>
+<body ng-app='iw3' style="font-family:sans-serif;">
     <div id="contenedor">
         <div class="loader-page"></div>
     </div>
+    <div ng-controller='home'>
     <div class="container-fluid" style="background-color: #3ab2e3">
 
         <div class="dropdown">
@@ -395,7 +394,7 @@
             <input type="number" ng-model='fontSize'>
             <label style="font-size: {{fontSize}}px;">texto de ejemplo </label>
         </div> -->
-
+</div>
 </body>
 
 
