--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -358,7 +358,7 @@
                             <div class="row" style="margin-top: 10px;">
                                 <div class="col l4">
                                     <label for="tipoDoc" class="form-label">Tipo de documento</label>
-                                    <select id="tipoDoc" (change)="cambiarVisibilidadDiv()" class="form-control" aria-label="Default select example" required>
+                                    <select id="tipoDoc" class="form-control" aria-label="Default select example" required ng-model="tipoDoc" ng-change="cambiarVisibilidadDiv()">
 
                                         <option value="1">Decreto</option>
                                         <option value="2">Informe</option>
@@ -366,7 +366,7 @@
                                         <option value="4">Volante</option>
                                     </select>
                                 </div>
-                                <div class="col l4" style="margin-top: 35px;" *ngIf="mostrarDiv">
+                                <div class="col l4" style="margin-top: 35px;" ng-show="mostrarDiv">
                                     <div class="form-check">
 
                                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -378,18 +378,18 @@
                             </div>
                             <div class="row" style="margin-top: 10px;">
                                 <div class="col l12">
-                                    <label for="titulo" class="form-label">Título del documento</label>
-                                    <input class="form-control" id="titulo" type="text"
+                                    <label for="tituloDoc" class="form-label">Título del documento</label>
+                                    <input class="form-control" id="tituloDoc" type="text"
                                         placeholder="Título del documento" aria-label="default input example" required>
 
                                 </div>
                             </div>
                             <div class="row" style="margin-top: 10px;">
                                 <div class="col l12">
-                                    <label for="cuerpo" class="form-label">Cuerpo del
+                                    <label for="cuerpoDoc" class="form-label">Cuerpo del
                                         documento</label>
                                     <textarea class="form-control" placeholder="Cuerpo del documento"
-                                        id="cuerpo" rows="3" required></textarea>
+                                        id="cuerpoDoc" rows="3" required></textarea>
                                 </div>
                             </div>
 
