--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -257,7 +257,7 @@
                     </button>
                 </div>
                 <div class="col-xl-4 xs-12">
-                    <button data-toggle="modal" data-target="#modalNuevoDocumento"
+                    <button data-toggle="modal" data-target="#modalNuevoDocumento" ng-click="estimulos()"
                         style="border-style: none; background-color: transparent;">
                         <div class="card" id="card3"
                             style="width: 100%; height: 250px; margin-left: 20px; text-align: center;">
@@ -369,8 +369,8 @@
                                 <div class="col l4" style="margin-top: 35px;" ng-show="mostrarDiv">
                                     <div class="form-check">
 
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <label id="final" class="form-check-label" for="flexCheckDefault"
+                                        <input id="final" class="form-check-input" type="checkbox" value="" >
+                                        <label class="form-check-label" for="flexCheckDefault"
                                             style="margin-top: 2px;">
                                             Final
                                         </label>
@@ -699,10 +699,10 @@
                                             {{o.fecha| date:'dd/MM/yyyy'}}
                                         </td>
                                         <td>
-                                            <button class="btn btn-danger" ng-click="verDocumentos($index);"
-                                                style="font-size: 12px;" ng-if="o.esFinal" id="rechazar">X</button>
-                                            <button class="btn btn-success" ng-click="verDocumentos($index);"
-                                                style="font-size: 12px;" ng-if="o.esFinal" id="aceptar">✓</button>
+                                            <button class="btn btn-danger" ng-click="rechazar(o.estimulo,o.id);"
+                                                style="font-size: 12px;" ng-if="o.esFinal && o.estado==1" id="rechazar">X</button>
+                                            <button class="btn btn-success" ng-click="aprobar(o.estimulo,o.id);"
+                                                style="font-size: 12px;" ng-if="o.esFinal && o.estado==1" id="aceptar">✓</button>
 
                                         </td>
                                     </tr>
