--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
     <script src="ui/modules/ng-stomp/dist/ng-stomp.standalone.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <style>
         .animated:hover {
@@ -230,6 +230,7 @@
 
     <div style="margin-top:50px;width: 97%; height: 100%;">
         <div id="divPrinc" class="container-fluid" style="display: inline; flex: 1;height: 100%;text-align: center; ">
+           
             <div class="row">
                 <div class="col-xl-3 xs-12">
                     <button data-toggle="modal" data-target="#modalProb"
@@ -332,7 +333,7 @@
                     </button>
                 </div>
                 <div class="col-xl-3 xs-12" ng-show="modalEstadisticasVisible">
-                    <button style="border-style: none; background-color: transparent;" ng-click="consultas()">
+                    <button style="border-style: none; background-color: transparent;" ng-click="estadisticas()">
                         <div class="card"
                             style="width: 100%; height: 250px; margin-left: 20px;margin-top: 20px; text-align: center;">
                             <img src="ui/tendencia.png" style="width: 35%;align-self: center; margin-top: 10px;"
@@ -751,7 +752,7 @@
                                             {{getEstado(o)}}
                                         </td>
                                         <td>
-                                            <button ng-show="o.esFinal && o.estado==1 && userData.rol==1sder" class="btn btn-danger" ng-click="rechazar(o.estimulo,o.id);"
+                                            <button ng-show="o.esFinal && o.estado==1 && userData.rol==1" class="btn btn-danger" ng-click="rechazar(o.estimulo,o.id);"
                                                 style="font-size: 12px;" 
                                                 id="rechazar">X</button>
                                             <button ng-show="o.esFinal && o.estado==1 && userData.rol==1" class="btn btn-success" ng-click="aprobar(o.estimulo,o.id);"
